fix letter-spacing

--- a/src/components/Hi/Hi.module.scss
+++ b/src/components/Hi/Hi.module.scss
@@ -5,7 +5,7 @@
   color: $secondary-text-colour;
   font-size: pxtorem(80);
   font-weight: 900;
-  letter-spacing: 5px;
+  letter-spacing: pxtorem(5);
   line-height: 1;
   height: 0;
   margin: 0;
