--- a/src/components/Location/Location.module.scss
+++ b/src/components/Location/Location.module.scss
@@ -6,7 +6,7 @@
   opacity: 0;
   color: $secondary-text-colour;
   font-weight: 300;
-  letter-spacing: 1px;
+  letter-spacing: pxtorem(1);
   line-height: 1.5;
   text-transform: uppercase;
   text-shadow: 1px 1px darken($primary-colour, 10%);
