--- a/src/components/Tagline/Tagline.module.scss
+++ b/src/components/Tagline/Tagline.module.scss
@@ -14,7 +14,7 @@
   font-size: pxtorem(22);
   color: $secondary-text-colour;
   font-weight: 300;
-  letter-spacing: 1px;
+  letter-spacing: pxtorem(1);
   line-height: 1;
   text-transform: uppercase;
   text-shadow: 1px 1px darken($primary-colour, 10%);
